--- a/css/plugin_style.css
+++ b/css/plugin_style.css
@@ -1,16 +1,18 @@
 
 /* CSS File for plugin frontend*/
 .option {
-    width: 4%;
-    /* float: left; */
+   /* width: 4%;
+     float: left; */
     top: 24%;
     position: fixed;
 	left: 1px;
 }
-
 .option a {
     overflow: hidden;
     display: block;
     height: 30px;
 	color:#000;
+}
+.option a:hover {
+    padding-left: 2px;
 }
