--- a/css/plugin_style.css
+++ b/css/plugin_style.css
@@ -1,18 +1,21 @@
 
 /* CSS File for plugin frontend*/
-.option {
+.fsm-option {
    /* width: 4%;
      float: left; */
-    top: 24%;
+    top: 14%;
     position: fixed;
 	left: 1px;
 }
-.option a {
+.fsm-option a {
     overflow: hidden;
     display: block;
     height: 30px;
-	color:#000;
+	
 }
-.option a:hover {
+.fsm-option a:hover {
     padding-left: 2px;
+}
+.fsm-setting-style table.form-table input {
+    width: 280px;
 }
